localmesh_src/testdata/golden/egress-mesh.yaml

admin:
  address: { socket_address: { address: 0.0.0.0, port_value: 15000 } }

node:
  id: egress-mesh
  cluster: egress-mesh


tracing:
  http:
    name: envoy.tracers.opentelemetry
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
      grpc_service:
        envoy_grpc: { cluster_name: otel_collector }
        timeout: 5s
      service_name: egress-mesh

static_resources:
  listeners:
  - name: egress
    address: { socket_address: { address: 0.0.0.0, port_value: 15001 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: egress
          cluster: egress_passthrough
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          require_client_certificate: true
          common_tls_context:
            tls_certificates:
            - certificate_chain: { filename: "/run/egress-mesh/id.crt" }
              private_key:       { filename: "/run/egress-mesh/id.key" }
            validation_context:
              trusted_ca: { filename: "/run/egress-mesh/trust.ca.crt" }

  - name: stats
    address: { socket_address: { address: 0.0.0.0, port_value: 15090 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: stats
          codec_type: AUTO
          route_config:
            virtual_hosts:
            - name: stats
              domains: ["*"]
              routes:
              - match: { prefix: "/stats/prometheus" }
                route: { cluster: admin_loopback }
          http_filters:
          - name: envoy.filters.http.router
            typed_config: { "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router }

  clusters:
  - name: egress_passthrough
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED
    connect_timeout: 5s

  - name: admin_loopback
    type: STATIC
    connect_timeout: 0.250s
    load_assignment:
      cluster_name: admin_loopback
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 15000 }

    
  - name: otel_collector
    type: STRICT_DNS
    connect_timeout: 1s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: otel_collector
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: otel-collector, port_value: 4317 }
