localmesh_src/testdata/golden/ingress-mesh.yaml

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 15000 }

node:
  id: ingress-mesh
  cluster: ingress-mesh


tracing:
  http:
    name: envoy.tracers.opentelemetry
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
      grpc_service:
        envoy_grpc: { cluster_name: otel_collector }
        timeout: 5s
      service_name: ingress-mesh

static_resources:
  listeners:
  - name: ingress
    address:
      socket_address: { address: 0.0.0.0, port_value: 8443 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          codec_type: AUTO
                    
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                json_format:
                  ts:               "%START_TIME%"
                  method:           "%REQ(:METHOD)%"
                  path:             "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  protocol:         "%PROTOCOL%"
                  response_code:    "%RESPONSE_CODE%"
                  bytes_received:   "%BYTES_RECEIVED%"
                  bytes_sent:       "%BYTES_SENT%"
                  duration_ms:      "%DURATION%"
                  upstream:         "%UPSTREAM_HOST%"
                  peer_spiffe_uri:  "%DOWNSTREAM_PEER_URI_SAN%"
                  request_id:       "%REQ(X-REQUEST-ID)%"
                  trace_id:         "%REQ(X-B3-TRACEID)%"
                  user_agent:       "%REQ(USER-AGENT)%"
          route_config:
            virtual_hosts:
            - name: app-a-mesh
              domains: ["app-a.sample-mesh.lvh.me"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: app-a-mesh }
            - name: envoy_admin
              domains: ["envoy.sample-mesh.lvh.me"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: ingress_self_admin }
              - match: { prefix: "/workload/app-a-mesh/" }
                route: { cluster: app-a-mesh_admin, prefix_rewrite: "/" }
              - match: { prefix: "/workload/app-b-mesh/" }
                route: { cluster: app-b-mesh_admin, prefix_rewrite: "/" }
              - match: { prefix: "/workload/egress-mesh/" }
                route: { cluster: egress-mesh_admin, prefix_rewrite: "/" }
          http_filters:
          # TODO Chunk 4: re-add envoy.filters.http.oauth2 with SDS file-based secrets
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                dex:
                  issuer: http://dex:5556
                  remote_jwks: { http_uri: { uri: "http://dex:5556/keys", cluster: dex, timeout: 5s }, cache_duration: { seconds: 300 } }
                  forward: true
                  payload_in_metadata: jwt_claims
                  claim_to_headers:
                  - { header_name: x-user-id,    claim_name: sub }
                  - { header_name: x-user-email, claim_name: email }
                  - { header_name: x-user-name,  claim_name: preferred_username }
              rules:
              - match: { prefix: "/" }
                requires: { provider_name: dex }
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain: { filename: "/run/ingress-mesh/id.crt" }
              private_key:       { filename: "/run/ingress-mesh/id.key" }

  - name: stats
    address: { socket_address: { address: 0.0.0.0, port_value: 15090 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: stats
          codec_type: AUTO
          route_config:
            virtual_hosts:
            - name: stats
              domains: ["*"]
              routes:
              - match: { prefix: "/stats/prometheus" }
                route: { cluster: admin_loopback }
          http_filters:
          - name: envoy.filters.http.router
            typed_config: { "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router }

  clusters:
  - name: app-a-mesh
    type: STRICT_DNS
    connect_timeout: 1s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: app-a-mesh
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: app-a-mesh, port_value: 3000 }
    
        
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain: { filename: "/run/ingress-mesh/id.crt" }
            private_key:       { filename: "/run/ingress-mesh/id.key" }
          validation_context:
            trusted_ca: { filename: "/run/ingress-mesh/trust.ca.crt" }
    

  - name: ingress_self_admin
    type: STATIC
    connect_timeout: 0.250s
    load_assignment:
      cluster_name: ingress_self_admin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 15000 }

  - name: admin_loopback
    type: STATIC
    connect_timeout: 0.250s
    load_assignment:
      cluster_name: admin_loopback
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 15000 }
  - name: app-a-mesh_admin
    type: STRICT_DNS
    connect_timeout: 1s
    load_assignment:
      cluster_name: app-a-mesh_admin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: app-a-mesh, port_value: 15000 }
  - name: app-b-mesh_admin
    type: STRICT_DNS
    connect_timeout: 1s
    load_assignment:
      cluster_name: app-b-mesh_admin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: app-b-mesh, port_value: 15000 }
  - name: egress-mesh_admin
    type: STRICT_DNS
    connect_timeout: 1s
    load_assignment:
      cluster_name: egress-mesh_admin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: egress-mesh, port_value: 15000 }

    
  - name: otel_collector
    type: STRICT_DNS
    connect_timeout: 1s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: otel_collector
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: otel-collector, port_value: 4317 }
